# rustAuth

./: Cargo.toml  diesel.toml
migrations/2024-09-08-211922_create_users/: up.sql
src/: schema.rs
