[package]
name = "rust_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-session = "0.10.0"
actix-web = "4"
argonautica = "0.2.0"
diesel = { version = "2.2.0", features = ["mysql"] }
dotenv = "0.15.0"
lettre = "0.11.8"
r2d2 = "0.8.10"
serde = "1.0.210"
yarte = "0.15.7"
